# hackathon-gazprom-2026

./: .gitignore  README.md  pyproject.toml
src/: config.py  content_extractor.py  coord_projection.py  device.py  docling_engine.py  layout_router.py  ocr_engine.py  olm_engine.py  paddle_engine.py  pipeline.py  vlm_engine.py
